Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69477

QNAM fails to download anything from FTP servers that don't support HELP command

XMLWordPrintable

      The request fails with:

      Unknown cmd HELP
      

      I can see that it is only used to check if SIZE and MDTM are supported. If this fails, I guess it could just assume these are not supported.

        For Gerrit Dashboard: QTBUG-69477
        # Subject Branch Project Status CR V

            cnn Qt Core & Network
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes